# music-gen

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  motif.cpp  motif.hpp  piece.cpp  piece.hpp  testmotif.cpp  testpiece.cpp  testtheme.cpp  theme.cpp  theme.hpp
